package action

interface CreatePurchaseOrderSheet : UseCase<Unit, String> {

}